# CFree

./: CONTEXT.md  README.md  components.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  skills-lock.json  vitest.config.ts  vitest.setup.ts
.claude/: settings.json
app/: globals.css  layout.tsx  page.tsx
app/api/extract/: route.ts
app/api/review/: route.ts
app/api/structure/: route.ts
components/: theme-toggle.tsx
components/resume/: builder.tsx  export-button.tsx  import-button.tsx  resume-document.tsx  resume-preview.tsx  review-panel.tsx  template-picker.tsx
components/resume/editor/: inline-suggestions.tsx  section-forms.tsx  suggestion-hint.tsx
docs/adr/: 0001-decompose-state-monolith.md
e2e/: app.spec.ts  resume-flow.spec.ts
hooks/: use-reset-all.ts
lib/__tests__/: utils.test.ts
lib/import/: heuristic.ts  links.ts  ocr.ts
lib/import/__tests__/: heuristic.test.ts  links.test.ts
lib/resume/: apply-feedback.ts  builder-providers.tsx  dates.ts  editable-paths.ts  export.ts  factory.ts  feedback-context.tsx  resume-context.tsx  review-context.tsx  storage-adapter.ts  storage.ts  store.tsx  template-context.tsx  templates.ts  types.ts
lib/resume/__tests__/: apply-feedback.test.ts  dates.test.ts  editable-paths.test.ts  export.test.ts  (+5 more)
lib/review/: capabilities.ts  checklist.ts  normalize.ts  types.ts
lib/server/: guidelines.ts
refs/: first_prompt.md  resume_guide_lines_2026.md
sidecar/: README.md  pyproject.toml
sidecar/app/: common.py  layout.py  main.py  ocr_engines.py  schema.py  text_layer.py
(+19 files in other folders)
