[project]
name = "resume-ocr-sidecar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "numpy>=2.5.0",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.3.1",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "python-doctr[torch]>=1.0.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]
